--- a/registerform.ui
+++ b/registerform.ui
@@ -19,15 +19,24 @@
   <property name="windowTitle">
    <string>Dialog</string>
   </property>
+  <property name="styleSheet">
+   <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(54, 103, 176, 255), stop:1 rgba(20, 66, 124, 255));
+
+QPushButton
+{
+	background-color:rgb(255, 255, 255);
+	border: 2px solid rgb(0, 0, 127);
+}</string>
+  </property>
   <widget class="QFrame" name="frame">
    <property name="enabled">
     <bool>true</bool>
    </property>
    <property name="geometry">
     <rect>
-     <x>350</x>
-     <y>110</y>
-     <width>421</width>
+     <x>190</x>
+     <y>90</y>
+     <width>731</width>
      <height>521</height>
     </rect>
    </property>
@@ -48,7 +57,7 @@ border-radius: 25px;
     </property>
     <property name="geometry">
      <rect>
-      <x>160</x>
+      <x>310</x>
       <y>20</y>
       <width>100</width>
       <height>100</height>
@@ -81,7 +90,7 @@ border-radius: 25px;
      <rect>
       <x>20</x>
       <y>460</y>
-      <width>381</width>
+      <width>691</width>
       <height>41</height>
      </rect>
     </property>
@@ -110,7 +119,7 @@ QPushButton:hover {
 </string>
     </property>
     <property name="text">
-     <string>Create account</string>
+     <string>Go to LOGIN</string>
     </property>
    </widget>
    <widget class="QPushButton" name="pushButton_3">
@@ -118,7 +127,7 @@ QPushButton:hover {
      <rect>
       <x>20</x>
       <y>410</y>
-      <width>381</width>
+      <width>691</width>
       <height>41</height>
      </rect>
     </property>
@@ -146,7 +155,7 @@ QPushButton:hover {
 </string>
     </property>
     <property name="text">
-     <string>LOGIN</string>
+     <string>CREATE</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_2">
@@ -154,7 +163,7 @@ QPushButton:hover {
      <rect>
       <x>20</x>
       <y>210</y>
-      <width>381</width>
+      <width>331</width>
       <height>51</height>
      </rect>
     </property>
@@ -183,14 +192,14 @@ padding-left: 40px;
      <rect>
       <x>0</x>
       <y>110</y>
-      <width>421</width>
+      <width>731</width>
       <height>101</height>
      </rect>
     </property>
     <property name="font">
      <font>
       <family>Semakin</family>
-      <pointsize>36</pointsize>
+      <pointsize>28</pointsize>
      </font>
     </property>
     <property name="styleSheet">
@@ -198,7 +207,7 @@ padding-left: 40px;
 color : #14427c;</string>
     </property>
     <property name="text">
-     <string>LOGIN PANEL</string>
+     <string>REGISTER PANEL</string>
     </property>
     <property name="alignment">
      <set>Qt::AlignCenter</set>
@@ -231,7 +240,7 @@ color : #14427c;</string>
      <rect>
       <x>20</x>
       <y>270</y>
-      <width>381</width>
+      <width>331</width>
       <height>51</height>
      </rect>
     </property>
@@ -307,47 +316,12 @@ border-radius: 12px;</string>
      <string/>
     </property>
    </widget>
-   <widget class="QPushButton" name="pushButton">
-    <property name="geometry">
-     <rect>
-      <x>260</x>
-      <y>330</y>
-      <width>141</width>
-      <height>20</height>
-     </rect>
-    </property>
-    <property name="font">
-     <font>
-      <family>Poppins Medium</family>
-      <pointsize>11</pointsize>
-      <italic>true</italic>
-     </font>
-    </property>
-    <property name="cursor">
-     <cursorShape>PointingHandCursor</cursorShape>
-    </property>
-    <property name="styleSheet">
-     <string notr="true">QPushButton{
-	background-color: transparent;
-	color: #3667b0;
-}
-QPushButton:hover{
-	color: #14427c;
-}
-
-
-</string>
-    </property>
-    <property name="text">
-     <string>Forget Password?</string>
-    </property>
-   </widget>
    <widget class="QLabel" name="label_7">
     <property name="geometry">
      <rect>
       <x>52</x>
       <y>330</y>
-      <width>121</width>
+      <width>221</width>
       <height>20</height>
      </rect>
     </property>
@@ -362,13 +336,13 @@ QPushButton:hover{
      <string notr="true">color: rgba(9,17,29,200);</string>
     </property>
     <property name="text">
-     <string>Remember me</string>
+     <string>I accept terms&amp;Conditions.</string>
     </property>
    </widget>
    <widget class="QToolButton" name="toolButton">
     <property name="geometry">
      <rect>
-      <x>357</x>
+      <x>310</x>
       <y>280</y>
       <width>31</width>
       <height>31</height>
@@ -394,7 +368,7 @@ QPushButton:hover{
    <widget class="QToolButton" name="toolButton_2">
     <property name="geometry">
      <rect>
-      <x>357</x>
+      <x>310</x>
       <y>280</y>
       <width>31</width>
       <height>31</height>
@@ -422,7 +396,7 @@ QPushButton:hover{
      <rect>
       <x>22</x>
       <y>360</y>
-      <width>381</width>
+      <width>681</width>
       <height>31</height>
      </rect>
     </property>
@@ -431,6 +405,9 @@ QPushButton:hover{
       <family>Poppins Medium</family>
       <pointsize>11</pointsize>
      </font>
+    </property>
+    <property name="cursor">
+     <cursorShape>ArrowCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:#fdfdfe;
@@ -446,7 +423,136 @@ QPushButton:hover{
      <bool>true</bool>
     </property>
    </widget>
+   <widget class="QLineEdit" name="lineEdit_4">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>210</y>
+      <width>331</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Poppins Medium</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 10px;
+background-color: #c4ccce;
+color: #09111d;
+padding-left: 40px;
+</string>
+    </property>
+    <property name="maxLength">
+     <number>15</number>
+    </property>
+    <property name="placeholderText">
+     <string>Full name</string>
+    </property>
+   </widget>
+   <widget class="QLineEdit" name="lineEdit_5">
+    <property name="geometry">
+     <rect>
+      <x>380</x>
+      <y>270</y>
+      <width>331</width>
+      <height>51</height>
+     </rect>
+    </property>
+    <property name="font">
+     <font>
+      <family>Poppins Medium</family>
+      <pointsize>12</pointsize>
+     </font>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">border-radius: 10px;
+background-color: #c4ccce;
+color: #09111d;
+padding-left: 40px;
+</string>
+    </property>
+    <property name="maxLength">
+     <number>27</number>
+    </property>
+    <property name="placeholderText">
+     <string>Email</string>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_6">
+    <property name="geometry">
+     <rect>
+      <x>386</x>
+      <y>280</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: transparent;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../assets/atomic_ICONArtboard 18.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
+   <widget class="QLabel" name="label_8">
+    <property name="geometry">
+     <rect>
+      <x>386</x>
+      <y>220</y>
+      <width>31</width>
+      <height>31</height>
+     </rect>
+    </property>
+    <property name="styleSheet">
+     <string notr="true">background-color: transparent;</string>
+    </property>
+    <property name="text">
+     <string/>
+    </property>
+    <property name="pixmap">
+     <pixmap>../assets/atomic_ICONS_blueOnlyArtboard 15.png</pixmap>
+    </property>
+    <property name="scaledContents">
+     <bool>true</bool>
+    </property>
+   </widget>
   </widget>
+  <widget class="QLabel" name="label_2">
+   <property name="enabled">
+    <bool>true</bool>
+   </property>
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1080</width>
+     <height>720</height>
+    </rect>
+   </property>
+   <property name="styleSheet">
+    <string notr="true"/>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../assets/atomic_logo_background_effect_white_5Artboard 1.png</pixmap>
+   </property>
+   <property name="scaledContents">
+    <bool>false</bool>
+   </property>
+  </widget>
+  <zorder>label_2</zorder>
+  <zorder>frame</zorder>
  </widget>
  <resources/>
  <connections/>
