--- a/registerform.ui
+++ b/registerform.ui
@@ -17,7 +17,11 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>ATOMIC Code Register panel</string>
+  </property>
+  <property name="windowIcon">
+   <iconset>
+    <normaloff>../assets/atomic_login_iconArtboard 7.png</normaloff>../assets/atomic_login_iconArtboard 7.png</iconset>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(54, 103, 176, 255), stop:1 rgba(20, 66, 124, 255));
@@ -155,7 +159,7 @@ QPushButton:hover {
 </string>
     </property>
     <property name="text">
-     <string>CREATE</string>
+     <string>REGISTER</string>
     </property>
    </widget>
    <widget class="QLineEdit" name="lineEdit_2">
