--- a/recupertionform.ui
+++ b/recupertionform.ui
@@ -23,7 +23,7 @@
    </size>
   </property>
   <property name="windowTitle">
-   <string>Dialog</string>
+   <string>Atomic Code Password Recovery Panel</string>
   </property>
   <property name="styleSheet">
    <string notr="true">background-color: qlineargradient(spread:pad, x1:0, y1:0, x2:1, y2:1, stop:0 rgba(54, 103, 176, 255), stop:1 rgba(20, 66, 124, 255));
@@ -40,10 +40,10 @@ QPushButton
    </property>
    <property name="geometry">
     <rect>
-     <x>320</x>
-     <y>100</y>
+     <x>329</x>
+     <y>90</y>
      <width>421</width>
-     <height>461</height>
+     <height>471</height>
     </rect>
    </property>
    <property name="styleSheet">
@@ -95,7 +95,7 @@ border-radius: 25px;
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>400</y>
+      <y>410</y>
       <width>381</width>
       <height>41</height>
      </rect>
@@ -132,7 +132,7 @@ QPushButton:hover {
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>350</y>
+      <y>360</y>
       <width>381</width>
       <height>41</height>
      </rect>
@@ -156,8 +156,11 @@ QPushButton:hover {
 QPushButton:hover {
 	background-color: #3667b0;
 	color : #fdfdfe;
-};
-
+}
+QPushButton::pressed {
+    background-color:rgb(79, 149, 255);
+   
+}
 </string>
     </property>
     <property name="text">
@@ -168,7 +171,7 @@ QPushButton:hover {
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>210</y>
+      <y>190</y>
       <width>381</width>
       <height>51</height>
      </rect>
@@ -187,7 +190,7 @@ padding-left: 40px;
 </string>
     </property>
     <property name="maxLength">
-     <number>15</number>
+     <number>27</number>
     </property>
     <property name="placeholderText">
      <string>Email</string>
@@ -197,7 +200,7 @@ padding-left: 40px;
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>110</y>
+      <y>100</y>
       <width>421</width>
       <height>101</height>
      </rect>
@@ -223,7 +226,7 @@ color : #14427c;</string>
     <property name="geometry">
      <rect>
       <x>27</x>
-      <y>220</y>
+      <y>200</y>
       <width>31</width>
       <height>31</height>
      </rect>
@@ -241,13 +244,13 @@ color : #14427c;</string>
      <bool>true</bool>
     </property>
    </widget>
-   <widget class="QLineEdit" name="lineEdit">
+   <widget class="QTextEdit" name="textEdit">
     <property name="geometry">
      <rect>
       <x>20</x>
-      <y>280</y>
+      <y>249</y>
       <width>381</width>
-      <height>41</height>
+      <height>101</height>
      </rect>
     </property>
     <property name="font">
@@ -256,18 +259,12 @@ color : #14427c;</string>
       <pointsize>11</pointsize>
      </font>
     </property>
-    <property name="cursor">
-     <cursorShape>ArrowCursor</cursorShape>
+    <property name="cursor" stdset="0">
+     <cursorShape>IBeamCursor</cursorShape>
     </property>
     <property name="styleSheet">
      <string notr="true">background-color:#fdfdfe;
-	color: #dd4a4a;	</string>
-    </property>
-    <property name="text">
-     <string/>
-    </property>
-    <property name="alignment">
-     <set>Qt::AlignCenter</set>
+color: #dd4a4a;	</string>
     </property>
     <property name="readOnly">
      <bool>true</bool>
